Renamed root project option.
git-svn-id: https://svn.code.sf.net/p/shareaza/code/trunk@9645 3231ed4b-2112-0410-84e0-8c3944a40730

--- a/plugins/GFLLibraryBuilder/GFLLibraryBuilder_14.vcxproj
+++ b/plugins/GFLLibraryBuilder/GFLLibraryBuilder_14.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <ProjectName>GFLLibraryBuilder</ProjectName>
     <ProjectGuid>{76CC356F-EFFD-4926-8DB3-D54AF496D431}</ProjectGuid>
-    <RootNamespace>GFLLibraryBuilder_9</RootNamespace>
+    <RootNamespace>GFLLibraryBuilder</RootNamespace>
     <Keyword>AtlProj</Keyword>
     <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
